[gd_scene load_steps=8 format=2]

[ext_resource path="res://real_deal/scripts/duel/DuelEnemy.gd" type="Script" id=1]
[ext_resource path="res://assets/animations/slime_normal.tres" type="SpriteFrames" id=2]
[ext_resource path="res://assets/gris.png" type="Texture" id=3]
[ext_resource path="res://assets/rojo.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/Comfortaa-Bold.ttf" type="DynamicFontData" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 17.6002

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 5 )

[node name="DuelEnemy" type="Area2D"]
script = ExtResource( 1 )

[node name="Character" type="AnimatedSprite" parent="."]
position = Vector2( 213.862, 309.96 )
scale = Vector2( 1.6473, 1.6473 )
frames = ExtResource( 2 )
animation = "idle"
flip_h = true
__meta__ = {
"_editor_description_": ""
}

[node name="HealthBarContainer" type="MarginContainer" parent="."]
margin_right = 432.0
margin_bottom = 570.0
custom_constants/margin_top = 515
custom_constants/margin_bottom = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="CenterContainer" parent="HealthBarContainer"]
margin_top = 515.0
margin_right = 432.0
margin_bottom = 530.0

[node name="HealthBar" type="TextureProgress" parent="HealthBarContainer/Container"]
margin_left = 107.0
margin_right = 324.0
margin_bottom = 15.0
value = 20.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 4 )
__meta__ = {
"_editor_description_": ""
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 222, 320 )
scale = Vector2( 10, 10 )
shape = SubResource( 1 )

[node name="NameContainer" type="MarginContainer" parent="."]
margin_right = 432.0
margin_bottom = 570.0
custom_constants/margin_top = 415
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="NameContainer"]
margin_top = 483.0
margin_right = 432.0
margin_bottom = 502.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 2 )
text = "DefaultName"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="StatesContainer" type="MarginContainer" parent="."]
margin_right = 432.0
margin_bottom = 570.0
custom_constants/margin_top = 535
__meta__ = {
"_edit_use_anchors_": false
}

[node name="States" type="HBoxContainer" parent="StatesContainer"]
margin_top = 535.0
margin_right = 432.0
margin_bottom = 570.0
custom_constants/separation = 2

[node name="EnemyLeftPosition" type="Position2D" parent="."]
position = Vector2( 216, 470 )
[connection signal="card_target" from="." to="." method="_on_Battle_Enemy_Swampy_card_target"]
[connection signal="not_card_target" from="." to="." method="_on_Battle_Enemy_Swampy_not_card_target"]
[connection signal="animation_finished" from="Character" to="." method="_on_Character_animation_finished"]
